HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/AssociatedTypeUnboundMember/Expected.uv
//! Expected diagnostic metadata for the AssociatedTypeUnboundMember rejected-source specimen.

expectedDiagnostic("E-TYP-2503", "req.14.ImplementationAssociatedTypeBoundForm")
